--- a/Presentation/MiniEcommerceServer.API/appsettings.json
+++ b/Presentation/MiniEcommerceServer.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "PostgreSQL": "Server=localhost;Port=1020;Database=MiniEcommerce;User Id=sa;Password=1234567890Aa;"
+    }
 }
