--- a/Core/MiniEcommerceServer.Application/MiniEcommerceServer.Application.csproj
+++ b/Core/MiniEcommerceServer.Application/MiniEcommerceServer.Application.csproj
@@ -19,7 +19,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<Folder Include="Abstractions\" />
+	  <Folder Include="Services\" />
 	</ItemGroup>
 
 </Project>
