--- a/Presentation/MiniEcommerceServer.API/appsettings.json
+++ b/Presentation/MiniEcommerceServer.API/appsettings.json
@@ -1,12 +1,15 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
     "AllowedHosts": "*",
     "ConnectionStrings": {
         "PostgreSQL": "Server=localhost;Port=1020;Database=MiniEcommerce;User Id=sa;Password=1234567890Aa;"
+    },
+    "Storage": {
+        "Azure": ""
     }
 }
