--- a/Presentation/MiniEcommerceServer.API/appsettings.json
+++ b/Presentation/MiniEcommerceServer.API/appsettings.json
@@ -11,5 +11,21 @@
     },
     "Storage": {
         "Azure": ""
+    },
+    "BaseStorageUrl": "",
+    "Token": {
+        "Audience": "www.miniecommerce.com",
+        "Issuer": "www.myapi.com",
+        "SecurityKey": "aslk$cnkhvgfcydiygsiaBDGUCTVF%7gudavhwecitsxfgQ%C1FT283368Q8YF267Q8T7261TGDVHGCFTYDUSJKJNG$&^#@"
+    },
+    "ExternalLoginSettings": {
+        "Facebook": {
+            "Client_ID": "546631843676576",
+            "Client_Secret": "d3438100dc962c8f34a765e7d7deef3c"
+
+        },
+        "Google": {
+            "Client_ID": "957600947173-p70lrqqhr09h965tdg3590122k70q04c.apps.googleusercontent.com"
+        }
     }
 }
