--- a/Presentation/MiniEcommerceServer.API/appsettings.json
+++ b/Presentation/MiniEcommerceServer.API/appsettings.json
@@ -27,5 +27,8 @@
         "Google": {
             "Client_ID": "957600947173-p70lrqqhr09h965tdg3590122k70q04c.apps.googleusercontent.com"
         }
+    },
+    "Seq": {
+        "ServerUrl": "http://localhost:5341"
     }
 }
