--- a/Infrastructure/MiniEcommerceServer.SignalR/MiniEcommerceServer.SignalR.csproj
+++ b/Infrastructure/MiniEcommerceServer.SignalR/MiniEcommerceServer.SignalR.csproj
@@ -7,11 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="HubServices\" />
+    <PackageReference Include="Microsoft.AspNetCore.App" Version="2.2.8" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.App" Version="2.2.8" />
+    <ProjectReference Include="..\..\Core\MiniEcommerceServer.Application\MiniEcommerceServer.Application.csproj" />
   </ItemGroup>
 
 </Project>
