--- a/Presentation/MiniEcommerceServer.API/appsettings.json
+++ b/Presentation/MiniEcommerceServer.API/appsettings.json
@@ -30,5 +30,10 @@
     },
     "Seq": {
         "ServerUrl": "http://localhost:5341"
+    },
+    "Mail": {
+        "Username": "",
+        "Password": "",
+        "Host": ""
     }
 }
