--- a/Infrastructure/MiniEcommerceServer.Infrastructure/MiniEcommerceServer.Infrastructure.csproj
+++ b/Infrastructure/MiniEcommerceServer.Infrastructure/MiniEcommerceServer.Infrastructure.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Azure.Storage.Blobs" Version="12.24.0" />
 	  <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.15" />
+	  <PackageReference Include="QRCoder" Version="1.6.0" />
   </ItemGroup>
 
   <ItemGroup>
